# bazel_py_issue_apr24

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  gazelle_python.yaml  requirements_lock.txt
utils/: BUILD.bazel  lib.py  lib_test.py
utils/grpc/: BUILD.bazel  grpc_lib.py
